Sat Oct 21 16:57:23 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (pinfo::init): Make PID_EXECED signal creation as well as
	PID_IN_USE.

Sat Oct 21 01:52:54 2000  Christopher Faylor <cgf@cygnus.com>

	* spawn.cc (spawn_guts): Don't do the reparenting step if we notice
	that the child has exited prior to sending the subprocess_ready signal
	(?).

Sat Oct 21 00:46:36 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.h (fhandler_console): Remove tcsetpgrp.
	* fhandler_console.cc (fhandler_console::tcsetpgrp): Eliminate.
	* fork.cc (fork_parent): Avoid returning same pid twice in a row
	regardless of OS.
	* pinfo.cc (pinfo::init): Rename create argument to flags and treat it
	as such.
	* signal.cc (set_sigcatchers): New function.
	(signal): Use set_sigcatchers to increment or decrement sigcatcher
	tracker.
	(sigaction): Ditto.  Add debugging output.
	* spawn.cc (spawn_guts): Always quote first argv[0] argument when it's
	a COMSPEC shell.

2000-10-20  DJ Delorie  <dj@redhat.com>

	* times.cc (to_time_t): pass zero time as epoch
	* fhandler.cc (fstat): copy atime/ctime from mtime if they're zero

Thu Oct 19 23:31:41 2000  Christopher Faylor <cgf@cygnus.com>

	* external.cc (fillout_pinfo): Pass PID_NOREDIR flag to pinfo init to
	avoid finding execed processes twice.
	* signal.cc (kill_pgrp): Ditto.
	* spawn.cc (spawn_guts): Avoid passing first argument to CreateProcess
	when running a windows shell so that CreateProcess will locate the
	shell.  Reorganize so that correct error is returned when CreateProcess
	fails.

Thu Oct 19 13:55:31 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (sigthread::init): Correct overzealous ifdef.
	* exceptions.cc (call_handler): Avoid calling sigthread acquire lock.
	* sigproc.h (sigthread): Comment out lock for now.
	* sync.cc (muto::acquire): Add a minor optimization.

2000-10-18  DJ Delorie  <dj@redhat.com>

	* Makefile.in: add miscfuncs.cc
	* miscfuncs.cc: new, miscellaneous functions